--- a/modtrack.css
+++ b/modtrack.css
@@ -1,3 +1,34 @@
 .modtrack-container {
+    position: absolute;
+    right: -200px;
+    top: 0px;
+    width: 200px;
+    height: 100%;
+    border-left: 1px solid #878c8e;
+    border-radius: 0 1rem 1rem 0;
+    background-color: rgba(0, 0, 0, .7);
+}
 
+.modtrack-container h2 {
+    text-align: center;
+    padding: .95rem 0;
+    font-size: 1rem;
+    font-weight: 700;
+    border-bottom: 1px solid #878c8e;
+}
+
+.modtrack-container button {
+    display: block;
+    width: 100%;
+    padding: 0.5rem 0;
+    border: none;
+    background: none;
+}
+
+.modtrack-container button:active {
+    border: none;
+}
+
+.right-section {
+    border-radius: 1rem 0 0 1rem !important;
 }
