--- a/modtrack.css
+++ b/modtrack.css
@@ -4,27 +4,36 @@
     top: 0px;
     width: 200px;
     height: 100%;
+    overflow: hidden;
     border-left: 1px solid #878c8e;
     border-radius: 0 1rem 1rem 0;
     background-color: rgba(0, 0, 0, .7);
 }
 
 .modtrack-container h2 {
-    text-align: center;
+    margin: 0;
     padding: .95rem 0;
+    text-align: center;
     font-size: 1rem;
     font-weight: 700;
     border-bottom: 1px solid #878c8e;
 }
 
-.modtrack-container h3 {
-    margin: none;
+.modtrack-container .command-container {
+    position: relative;
+    width: inherit;
+    height: calc(100% - 2.9rem);
+    padding: 1rem 0;
+}
+
+.command-container h3 {
+    margin: none !important;
     padding: 0 1rem;
     font-size: 1rem;
     font-weight: 700;
 }
 
-.modtrack-container button {
+.command-container button {
     display: block;
     width: 100%;
     padding: 0.5rem 0;
@@ -33,11 +42,11 @@
     background: none;
 }
 
-.modtrack-container button:hover {
+.command-container button:hover {
     cursor: pointer;
 }
 
-.modtrack-container button:active {
+.command-container button:active {
     border: none;
 }
 
